--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
     padding: 0;
 }
 body.dark {
-background-color: black;
-color: white;
+background-color: rgb(35, 34, 34);
+color: rgb(224, 221, 221);
 }
 img {
     display: inline-block;
