--- a/src/components/ProdId/styles/prodInfo.css
+++ b/src/components/ProdId/styles/prodInfo.css
@@ -1,7 +1,8 @@
 .prodinfo {
     min-width: 300px;
     max-width: 500px;
-    border: 1px solid;
+    border: 0.1px solid rgba(214, 209, 209, 0.567);
+    box-shadow: 0px 1px 2px 0px #0808083a;
     padding: 20px;
     border-radius: 20px;
 }
