--- a/src/components/homePage/styles/filterPrice.css
+++ b/src/components/homePage/styles/filterPrice.css
@@ -1,5 +1,5 @@
 .filterprice {
-    border: 1px solid;
+    box-shadow: 0px 1px 2px 0px #0808083a;
     padding: 10px;
     border-radius: 10px;
     display: flex;
@@ -14,4 +14,9 @@
 }
 .filterprice__item input {
     width: 150px;
+}
+.filterprice__input {
+  background-color: rgba(161, 160, 160, 0.342);
+  border: none;
+  outline: none;
 }
