--- a/src/components/homePage/styles/prodCard.css
+++ b/src/components/homePage/styles/prodCard.css
@@ -1,6 +1,7 @@
 .prodcard {
-    width: 250px; 
-    border: 1px solid;
+    width: 350px; 
+    border: 0.1px solid rgba(214, 209, 209, 0.567);
+    box-shadow: 0px 1px 2px 0px #0808083a;
     padding: 20px;
     border-radius: 20px;
     display: flex;
