--- a/src/components/purchases/styles/purchaseCard.css
+++ b/src/components/purchases/styles/purchaseCard.css
@@ -1,7 +1,8 @@
 .purchasecard {
     width: 300px;
     padding: 20px;
-    border: 1px solid;
+    border: 0.1px solid rgba(214, 209, 209, 0.567);
+    box-shadow: 0px 1px 2px 0px #0808083a;
     border-radius: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
